Replacing calls to str.trim().isEmpty() with str.isBlank() issue #1218